Fixed logo distortion for PIRATE-4922

--- a/less/theme.less
+++ b/less/theme.less
@@ -157,7 +157,11 @@ body {
 }
 
 .logo-image {
-      max-height: 200px;
+    max-height: 200px;
+
+    @media @tablet {
+        max-height: none;
+    }
 }
 
 
