--- a/less/widgets.less
+++ b/less/widgets.less
@@ -44,6 +44,7 @@
     margin-right: 10px;
     @media @tablet {
         max-width: 100%;
+        margin-right: 0;
         margin-bottom: 20px;
         float: none;
     }
